syntax = "proto3";

option csharp_namespace = "GrpcMessageNode";

package Validator;

service Validate {
  rpc ValidateMessage (MessageMetaData) returns (ValidatorReply);
}

message MessageMetaData {
	string clientID = 1;
	string apiKey = 2;
	string tag = 3;  
	int32 year = 4;
	int32 month = 5;
	int32 day = 6;
	int32 hour = 7;
	int32 minute = 8;
}

message ValidatorReply {
  string replyCode = 1;
  int32 accountPriority = 2;
}
